--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <img src="images/neurosync.png" alt="neurosync logo" height="75" width="auto">
             <div class="header-right">
                 <ul class="header-links">
-                    <li>Home</li>
-                    <li>About</li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pages/about.html">About</a></li>
                     <li>Solutions</li>
                     <li>Pricing</li>
                     <li>Contact</li>
