Add header content and style to remaining pages
Add links to and from all pages in header links.

Add temporary 'under construction' message

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 <ul class="header-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="pages/about.html">About</a></li>
-                    <li>Solutions</li>
-                    <li>Pricing</li>
-                    <li>Contact</li>
+                    <li><a href="pages/solutions.html">Solutions</a></li>
+                    <li><a href="pages/pricing.html">Pricing</a></li>
+                    <li><a href="pages/contact.html">Contact</a></li>
                 </ul>
                 <button class="login">Login/Sign Up</button>
             </div>
