--- a/pages/about.html
+++ b/pages/about.html
@@ -13,12 +13,16 @@
                 <ul class="header-links">
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li>Solutions</li>
-                    <li>Pricing</li>
-                    <li>Contact</li>
+                    <li><a href="solutions.html">Solutions</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <button class="login">Login/Sign Up</button>
             </div>
         </div>
+
+        <!-- Temporary Error -->
+         <h1>We're Sorry...</h1>
+         <p>This page is currently under construction</p>
     </body>
 </html>
