Add respective titles to each page

--- a/pages/solutions.html
+++ b/pages/solutions.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>NeuroSync | About</title>
+        <title>NeuroSync | Solutions</title>
         <link rel="stylesheet" href="../css/solutions-style.css">
     </head>
 
