--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>NeuroSync | About</title>
+        <title>NeuroSync | Contact</title>
         <link rel="stylesheet" href="../css/contact-style.css">
     </head>
 
