--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>NeuroSync | About</title>
+        <title>NeuroSync | Pricing</title>
         <link rel="stylesheet" href="../css/pricing-style.css">
     </head>
 
