--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="pages/pricing.html">Pricing</a></li>
                     <li><a href="pages/contact.html">Contact</a></li>
                 </ul>
-                <button class="login">Login/Sign Up</button>
+               <a class="login" href="pages/login.html">Login/Sign Up</a>
             </div>
         </div>
 
@@ -88,15 +88,15 @@
         <footer class="footer">
             <h6 class="copyright">2025 NeuroSync Solutions. All rights reserved | <a href="#">Terms</a> | <a href="#">Privacy</a></h6>
             <ul class="bottom-links">
-                <li>Home</li>
+                <li><a href="index.html">Home</a></li>
                 <li>|</li>
-                <li>About</li>
+                <li><a href="pages/about.html">About</a></li>
                 <li>|</li>
-                <li>Solutions</li>
+                <li><a href="pages/solutions.html">Solutions</a></li>
                 <li>|</li>
-                <li>Pricing</li>
+                <li><a href="pages/pricing.html">Pricing</a></li>
                 <li>|</li>
-                <li>Contact</li>
+                <li><a href="pages/contact.html">Contact</a></li>
             </ul>
         </footer>
     </body>
