--- a/pages/login.html
+++ b/pages/login.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>NeuroSync | Contact</title>
-        <link rel="stylesheet" href="../css/contact-style.css">
+        <title>NeuroSync | Login</title>
+        <link rel="stylesheet" href="../css/login-style.css">
     </head>
 
     <body>
@@ -17,7 +17,7 @@
                     <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
-                <a class="login" href="login.html">Login/Sign Up</a>
+                <a class="login" href="pages/login.html">Login/Sign Up</a>
             </div>
         </div>
 
