--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -17,7 +17,7 @@
                     <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
-                <button class="login">Login/Sign Up</button>
+                <a class="login" href="login.html">Login/Sign Up</a>
             </div>
         </div>
 
