Add content and styling to about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -22,7 +22,103 @@
         </div>
 
         <!-- Temporary Error -->
-         <h1>We're Sorry...</h1>
-         <p>This page is currently under construction</p>
+         <!-- <h1>We're Sorry...</h1>
+         <p>This page is currently under construction</p> -->
+
+        <div class="about-header">
+            <img src="../images/neurosync-big.png" alt="NeuroSync logo" height="200" width="auto">
+            <h1 class="about-title">About NeuroSync Solutions</h1>
+        </div>
+
+        <div class="facts">
+            
+
+            <div class="pars">
+                <p class="fact-par one"><em>"Founded in 2023. Headquartered in San Francisco, with team members across 3 countries."</em></p>
+
+                <p class="fact-par two"><em>"Over 2,000 hours of mental energy optimized since launch"</em></p>
+            </div>
+
+            
+        </div>
+
+        <div class="info-section">
+            <h2 class="info-header">Optimizing Human Potential through Intelligent Technology</h2>
+
+            <div class="info-text">
+                <p class="info-par one">At <strong>NeuroSync Solutions</strong>, we believe the future of productivity lies at the intersection of neuroscience and artificial intelligence. Our mission is to empower individuals and teams to perform at their cognitive best by offering intuitive, data-driven tools that enhance focus, efficiency, and mental clarity.</p>
+
+                <p class="info-par two">Founded in 2023 by a group of neuroscientists, engineers, and productivity experts, NeuroSync was created to answers a simple question:</p>
+
+                <p class="info-question"><em>"What if your brain had a dashboard"</em></p>
+
+                <p class="info-par three">We've developed a proprietary AI platform that learns from your behavior, identifies cognitive patterns, and provides real-time feedback to optimize your day - whether you're deep in solo work or leading a collaborative team.</p>
+            </div>
+        </div>
+
+        <div class="vision-section">
+        <h2 class="vision-header">Our Vision</h2>
+            <p class="vis-par">We envision a world where technology adapts to your mind, not the other way around - where data helps you understand not just what you do, but <em>how well your brain is doing it</em></p>
+        </div>
+
+        <div class="method-section">
+            <h2 class="method-header">What We Do</h2>
+
+            <div class="method-cards">
+                <div class="card one">
+                    <img src="../images/ai-icon.png" alt="circuit board icon with the abbreviation AI in the center" height="100px" width="auto">
+                    <p class="met-par one">AI-powered focus tracking and attention analytics</p>
+                </div>
+
+                <div class="card two">
+                    <img src="../images/brain-icon.png" alt="brain icon" height="100px" width="auto">
+                    <p class="met-par two">Brain-inspired productivity coaching</p>
+                </div>
+
+                <div class="card three">
+                    <img src="../images/cog-icon.png" alt="icon of a multiple gears, one with a checkmark in the middle" height="100px" width="auto">
+                    <p class="met-par three">Cognitive training programs tailored to individual performance cycles</p>
+                </div>
+
+                <div class="card four">
+                    <img src="../images/team-icon.png" alt="icon of a group of people connected with a circle" height="100px" width="auto">
+                    <p class="met-par four">Enterprise solutions for remote team optimization</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="conclusion">
+            <div class="who-section">
+                <h2 class="who-header">Who We Serve</h2>
+                <ul class="who-list">
+                    <li>Remote and hybrid teams</li>
+                    <li>Entrepreneurs and startup founders</li>
+                    <li>Researchers, writers, and creatives</li>
+                    <li>Anyone seeking to align their time with their peak mental performance</li>
+                </ul>
+            </div>
+
+            <div class="why-section">
+                <h2 class="why-header">Why It Matters</h2>
+
+                <p class="why-par">In a world of constant digital noise, managing your mental energy is the ultimate competitive edge, NeuroSync helps you work smarter - not just harder - by helping you <em>understand</em> your mind, not just manage your time.</p>
+            </div>
+        </div>
+
+
+        <footer class="footer">
+            <h6 class="copyright">2025 NeuroSync Solutions. All rights reserved | <a href="#">Terms</a> | <a href="#">Privacy</a></h6>
+            <ul class="bottom-links">
+                <li><a href="index.html">Home</a></li>
+                <li>|</li>
+                <li><a href="pages/about.html">About</a></li>
+                <li>|</li>
+                <li><a href="pages/solutions.html">Solutions</a></li>
+                <li>|</li>
+                <li><a href="pages/pricing.html">Pricing</a></li>
+                <li>|</li>
+                <li><a href="pages/contact.html">Contact</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
